displayed text onto page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>quizzzz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="/lib/jquery.js"></script>
-    <script src="/lib/underscore.js"></script>
-    <script src="/lib/backbone.js"></script>
-    <script src="/lib/handlebars.js"></script>
+<!--     <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="../node_modules/jquery/dist/jquery.js"></script>
+  <script src="../node_modules/react/dist/react.js"></script>
+  <script src="../node_modules/react-dom/dist/react-dom.js"></script>
+  <script src="../node_modules/lodash/lodash.js"></script> -->
 
   </head>
 
   <body>
-    <h1>quizzzzzz here</h1>
+    <h1>hellloooo</h1>
+    <div id="app"></div>
 
   </body>
 </html>
