pivot to client side rendering

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,26 @@
-<div>hello world</div>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>quizzzzssss</title>
+  <script src="./node_modules/jquery/dist/jquery.js"></script>
+  <script src="./node_modules/lodash/lodash.js"></script>
+
+  <script src="./node_modules/react/dist/react.js"></script>
+  <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.3/react-bootstrap.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  </head>
+
+  <body>
+    <h1>hellloooaasdasdsdo</h1>
+    <div id="app"></div>
+
+
+<!-- Render Script -->
+    <script type="text/javascript">console.log('hello')</script>
+    <!-- <script type="text/jsx" src="./components/App.jsx"></script> -->
+    <script src="../compiled/components/App.js"></script>
+      <script src="./compiled/start.js"></script>
+  </body>
+</html>
