--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,17 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <title>quizzzz</title>
-<!--     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/react/dist/react.js"></script>
   <script src="../node_modules/react-dom/dist/react-dom.js"></script>
-  <script src="../node_modules/lodash/lodash.js"></script> -->
-
+  <script src="../node_modules/lodash/lodash.js"></script>
   </head>
 
   <body>
     <h1>hellloooo</h1>
     <div id="app"></div>
+    // RENDER APP
+
+    <script src="../index.js"></script>
+
 
   </body>
 </html>
